# Basic-Vulkan-Renderer

./: .env.cmake  .gitignore  CMakeLists.txt  README.md
source/app/: app.cpp  app.hpp
source/core/: app.cpp  main.cpp
source/engine/: utils.hpp
source/engine/buffer/: buffer.cpp  buffer.hpp
source/engine/camera/: camera.cpp  camera.hpp
source/engine/camera/camera_controller/: camera_controller.cpp  camera_controller.hpp
source/engine/debugging/: vulkan_debugger.cpp  vulkan_debugger.hpp
source/engine/device/: device.cpp  device.hpp
source/engine/material/: material.cpp  material.hpp
source/engine/material/sampler/: sampler.cpp  sampler.hpp
source/engine/material/texture/: texture.cpp  texture.hpp
source/engine/mesh/: mesh.cpp  mesh.hpp  model.hpp
source/engine/model/: model.cpp  model.hpp
source/engine/object/: object.cpp  object.hpp
source/engine/pipeline/: pipeline.cpp  pipeline.hpp
source/engine/pipeline/descriptors/: descriptors.cpp  descriptors.hpp
source/engine/renderer/: renderer.cpp  renderer.hpp
source/engine/scene/: scene.cpp  scene.hpp
source/engine/swap_chain/: swap_chain.cpp  swap_chain.hpp
source/engine/systems/cull_system/: cull_system.cpp  cull_system.hpp
source/engine/systems/material_system/: material_system.cpp  material_system.hpp
source/engine/systems/render_system/: render_system.cpp  render_system.hpp
source/engine/window/: window.cpp  window.hpp
source/shaders/: indirect_cull.comp  instance_cull.comp  main.frag  main.vert
